# 2d-game-engine-pikuma

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  vcpkg.json
assets/: assets.json
assets/tilemaps/: map-jungle.tmx
assets/tilemaps/village/: map-village.tmx  tileset_floor.tsx  tileset_village_abandoned.tsx
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
libs/: CMakeLists.txt
libs/imgui/: imgui_sdl.cpp
libs/tmxlite/include/tmxlite/detail/: Log.hpp
src/: Game.cpp  Game.h  Logger.cpp  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/AssetStore/Aseprite/: AsepriteObject.cpp  AsepriteObject.h
src/AssetStore/Tiled/: MapLayer.cpp  MapLayer.h  Texture.cpp
src/AssetStore/tiled/: MapLayer.cpp  MapLayer.h  Texture.cpp
src/Components/: AnimationComponent.h  RigidBodyComponent.h  SpriteComponent.h  TilemapComponent.h  TransformComponent.cpp  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/ResourceManager/Aseprite/: AsepriteObject.h
src/ResourceManager/Tiled/: MapLayer.cpp  Texture.cpp  Texture.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
